# yadisk-dump

./: .gitignore  LICENSE  README.md  README.ru.md  pyproject.toml
.github/workflows/: ci.yml
src/yadisk_dump/: __init__.py  __main__.py  api.py  cli.py  config.py  downloader.py  paths.py  scanner.py  state.py  ui.py
tests/: test_api.py  test_cli.py  test_config.py  test_downloader.py  test_paths.py  test_scanner.py  test_security.py  test_state.py  test_ui.py
